--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,3 +47,14 @@ services:
       - ME_CONFIG_MONGODB_ADMINUSERNAME=${MONGO_EXPRESS_USER}
       - ME_CONFIG_MONGODB_ADMINPASSWORD=${MONGO_EXPRESS_PASSWORD}
       - ME_CONFIG_MONGODB_SERVER=comercios_mongo
+  #!rabbitmq
+  rabbitmq:
+    image: rabbitmq
+    container_name: comercios_rabbitmq
+    restart: always
+    ports:
+      - 5672:5672
+      - 15672:15672
+    environment:
+      - RABBITMQ_DEFAULT_USER=${RABBITMQ_USER}
+      - RABBITMQ_DEFAULT_PASS=${RABBITMQ_PASSWORD}
